Update 'Strategic Account Leader' to 'Strategic Account Executive'

--- a/customer-success/solutions-architects/processes/account-planning/index.html.md.erb
+++ b/customer-success/solutions-architects/processes/account-planning/index.html.md.erb
@@ -12,7 +12,7 @@ title: Account Planning for Solutions Architects
 
 ## Account Planning in Gainsight Overview 
 
-[Account planning](/handbook/sales/account-planning/) helps the SAL and the SA develop a plan to elevate opportunity-driven conversations into value-based conversations that focus on the customer's value drivers. This is is a critical step is helping the team evaluate the customer's organization and work more strategically across the territory. Gainsight is a the tool for Strategic Account Leaders (SALs), Solutions Architects (SAs), and Customer Success Managers (CSMs) to manage the account planning process. Since it sits within SalesForce, it provides a comprehensive view of your customers, allows you to understand trends and risks, and empowers you to execute a strategy to help you win deals.
+[Account planning](/handbook/sales/account-planning/) helps the SAE and the SA develop a plan to elevate opportunity-driven conversations into value-based conversations that focus on the customer's value drivers. This is is a critical step is helping the team evaluate the customer's organization and work more strategically across the territory. Gainsight is a the tool for Strategic Account Leaders (SAEs), Solutions Architects (SAs), and Customer Success Managers (CSMs) to manage the account planning process. Since it sits within SalesForce, it provides a comprehensive view of your customers, allows you to understand trends and risks, and empowers you to execute a strategy to help you win deals.
 
 # Accessing Gainsight
 - Steps to access Gainsight are outlined on this [Handbook Page](https://about.gitlab.com/handbook/sales/gainsight/#getting-started)
@@ -31,11 +31,11 @@ A rationale describing how an SA can contribute to the Account Planning is docum
 
 
 # Collaborating with Other Team Members
-It is important to note that Gainsight brings the entire account team onto a single platform to plan, and by having the SAL, SA, and CSM in one place, it allows the SA to visualize the dependencies between the tasks of each individual much more clearly and understand how each team member is working towards the 6, 12, and 18 month goals.
-- SAs should collaborate with the SAL/CSM on a Technical Win Plan and ensure that the plan encompasses Workshops, PoVs, deep dives, etc. 
+It is important to note that Gainsight brings the entire account team onto a single platform to plan, and by having the SAE, SA, and CSM in one place, it allows the SA to visualize the dependencies between the tasks of each individual much more clearly and understand how each team member is working towards the 6, 12, and 18 month goals.
+- SAs should collaborate with the SAE/CSM on a Technical Win Plan and ensure that the plan encompasses Workshops, PoVs, deep dives, etc. 
 
 **NOTE**
-- The Techincal Win Plan is still part of the SALs account plan and SAs don't have to create anything new.
+- The Techincal Win Plan is still part of the SAEs account plan and SAs don't have to create anything new.
 - SAs should be DRIs on the technical activities for new lands.
 - SAs should own technical activities on account expansions where CSMs are not engaged. 
 - SAs should collaborate with the CSMs on account expansions where deemed necessary especially where there’s a need for tier upgrade and  onboarding of new teams.
@@ -44,17 +44,17 @@ It is important to note that Gainsight brings the entire account team onto a sin
 
 # FAQs:
 - **How is Gainsight different from Troops and SFDC?**
-  - Gainsight is a platform that enables collaboration between SAL, SA & CSMs. SA are expected to collaborate during Account Planning. SAs should own the objective of creating a technical win plan during account planning. Troops is used for day to day activity capture for meetings. 
+  - Gainsight is a platform that enables collaboration between SAE, SA & CSMs. SA are expected to collaborate during Account Planning. SAs should own the objective of creating a technical win plan during account planning. Troops is used for day to day activity capture for meetings. 
 - **Will using Gainsight save me time?**
   - Yes, Gainsight will save time by making sure all teams are working & collaborating in the same system.
 - **How is it going to help me in my daily job?**
-  - It's going to help in our daily jobs since now all the account plans by SALs, Success plans by TAMS are listed in the same system encouraging collaboration.
+  - It's going to help in our daily jobs since now all the account plans by SAEs, Success plans by TAMS are listed in the same system encouraging collaboration.
 - **Why use gainsight for account planning**
   - It's an existing platform already loved by existing teams in Gitlab. Gainsight provides metrics, timelines, call to action like reminders. It also has the ability to create playbooks defining different steps in a process for eg: [an ultimate play](https://about.gitlab.com/handbook/customer-success/solutions-architects/sales-plays/)
 - **How is it related to SFDC?**
   - SFDC is still the best place to record customer information for accurate forecating, creating accounts so on. Gainsight gives you the power to forecast plans for accounts, create objectives, identify tasks to be completed for those objectives. The timeline, attributes section of gainsight is fed back into SFDC.
-- **What if there is no account plan from the SAL?**
-  - The SA together with the SAL will create a Technical Win Plan using Gainsight.
+- **What if there is no account plan from the SAE?**
+  - The SA together with the SAE will create a Technical Win Plan using Gainsight.
 
 
 # Gainsight Example: How an SA Adds/Update a Success Plan
