--- a/customer-success/solutions-architects/processes/activity-capture/activity-desc/index.html.md.erb
+++ b/customer-success/solutions-architects/processes/activity-capture/activity-desc/index.html.md.erb
@@ -35,7 +35,7 @@ This page describes all activity types available for SAs in
 
 Select these types when capturing activities by Enterprise and Commercial SA teams.
 
-- **Customer No Show** - The SA has the opportunity to log an activity for a scheduled client meeting whereby the customer has not attended. In collaboration with the SAL/AE/Channels Manager, the SA should try to understand the underlying reason for the customers absence and record under the [SA] Activity Description.
+- **Customer No Show** - The SA has the opportunity to log an activity for a scheduled client meeting whereby the customer has not attended. In collaboration with the SAE/AE/Channels Manager, the SA should try to understand the underlying reason for the customers absence and record under the [SA] Activity Description.
 
 - **Demo** - The SA can record the activity when a planned GitLab product demonstration has been 
 delivered to the client. In the [SA] Activity Description field in troops, the SA should 
@@ -57,9 +57,9 @@ also refer to insights around the demonstration purpose and area of product walk
   * Technical Evaluation cadence: The SA has the opportunity to record their activity with their client specific in relation to the Technical Evaluation. Upon agreeing to a plan, specific requirements and the definition of success, a regular or irregular cadence may be set by the SA with collaboration with the customer. 
   * PoV cadence: The SA will often agree to a PoV plan, duration, sign off the in-scope PoV success criteria and work with their client on a regular cadence [weekly, bi-weekly, multi-weekly]. This [SA] Activity is an opportunity to capture the frequency and progress on the PoV. The SA should consider hosting a final cadence session with their client to agree on the sign off of the final completion of the evaluation.
 
-- **Presentation / pitch** - The SA has the opportunity to record their preparation for a presentation to the client as well as the actual delivery. Sometimes a Pitch is requested by our SALs/AEs due to significant client discussion without a SA, which is completely acceptable. Consideration for this type of [SA] activity are: 
+- **Presentation / pitch** - The SA has the opportunity to record their preparation for a presentation to the client as well as the actual delivery. Sometimes a Pitch is requested by our SAEs/AEs due to significant client discussion without a SA, which is completely acceptable. Consideration for this type of [SA] activity are: 
   * The SA attended an initial Technical Discovery session with the client and first requirements have been clearly collaborated on with the SA to take initiative to prepare for a presentation.
-  * The SA debriefed internally with their SAL/AE/Channels Managers to understand the requirements of a first-time SA connect with the client and the expectation on an initial Presentation / Pitch
+  * The SA debriefed internally with their SAE/AE/Channels Managers to understand the requirements of a first-time SA connect with the client and the expectation on an initial Presentation / Pitch
 
 - **Ride Along** - This activity type is used when one SA is shadowing another SA to help support the opportunity, provide feedback for the primary solutions architect, and to learn how the primary solutions architect works. Please leverage [the Ride Alongs](/handbook/customer-success/solutions-architects/sa-practices/ride-alongs/) handbook page to learn more about how Ride Alongs work. Record this activity on Account level. Recording at the account level is required because ride alongs that are inter-segment or inter-region will not have their opportunities available to the riders. 
 
