--- a/customer-success/solutions-architects/processes/alliance/index.html.md.erb
+++ b/customer-success/solutions-architects/processes/alliance/index.html.md.erb
@@ -42,7 +42,7 @@ The below documented interactions are between internal GitLab roles.
 | -------------- | ------- |
 | Alliance Director (AD) | \- Lead and coordinate technical conversations between Partner, GitLab, and Customers <Br> \- Enable Partner pre-sales on the GitLab value prop and technology <Br> \- Work with Marketing on technical assets for Partner conferences and events <Br> \- Drive process improvement related to Support, R&D, field engagement, etc <Br> \- Help run public events such as bootcamps, etc to promote the joint tech and generate sales leads |
 | Alliance Business Dev Manager (ABDM) | \- Enable Partner pre-sales on the GitLab value prop and technology <Br> \- Act as a SME in customer sales cycles|
-| SAL / Field SA |  \- Enable Partner pre-sales on the GitLab value prop and technology <Br> \- Act as a SME in customer sales cycles <Br> \- Provide general internal enablement on partner technology and partnership status <Br> \- Connect me with my peers at Partner <Br> \- Identify ways to effectively collaborate with the Partner |
+| SAE / Field SA |  \- Enable Partner pre-sales on the GitLab value prop and technology <Br> \- Act as a SME in customer sales cycles <Br> \- Provide general internal enablement on partner technology and partnership status <Br> \- Connect me with my peers at Partner <Br> \- Identify ways to effectively collaborate with the Partner |
 | Customer Success Manager (CSM) |  \- Provide general internal enablement on partner technology and partnership status <Br> \- Occasionally be a SME in post-sales scenarios to help unblock GitLab adoption at a customer  |
 | PS Engineer (PSE) |  \- Provide general internal enablement on partner technology and partnership status <Br> \- Connect me with my peer PS engineers from the partner side in a services engagement at a customer <Br> \- Collaborate on reference architecture updates. Cloud infrastructure evolves and therefore so do our reference architectures used by our PSE providing customer services |
 | Support Engineer |   \- Provide general internal enablement on partner technology and partnership status <Br> \- Connect me with my peer Support engineers from the partner side in a Support case at a named account |
@@ -58,7 +58,7 @@ Alliances SAs have a variety of needs to reach out to other roles at GitLab
 | -------------- | ------- |
 | Alliance Director (AD) | - General guidance on overall business strategy and prioritization of activities in the partnership |
 | Alliance Business Dev Manager (ABDM) | - Ask for account mapping activities based on technical requests by anyone on a GitLab field account team |
-| SAL / Field SA | - Ask for status and or follow-up if a co-customer of a partner has initiated an issue or request through the partnership level contacts |
+| SAE / Field SA | - Ask for status and or follow-up if a co-customer of a partner has initiated an issue or request through the partnership level contacts |
 | Customer Success Manager (CSM) | - Ask for status and or follow-up if a co-customer of a partner has initiated an issue or request through the partnership level contacts |
 | Support Engineer | - Ask for status and or follow-up if a co-customer of a partner has initiated an issue or request through the partnership level contacts |
 | Product Manager | - Ask for collaboration if a partner development team has initiated an issue, request or go to market motion through the partnership level contacts |
