--- a/customer-success/solutions-architects/processes/collaboration-project/index.html.md.erb
+++ b/customer-success/solutions-architects/processes/collaboration-project/index.html.md.erb
@@ -41,7 +41,7 @@ Customers should raise issues when they have specific questions, use cases, or t
 
 
 ### How does a Solution Architect utilise a Collaboration Project?
-Once a solution architect has determined that an opportunity will span across multiple internal or customer teams they will create a project in the <TBC> group on GitLab.com. Key participants should be added as members of the project (SAL, CSM, PS, Product, Customer Stakeholders) 
+Once a solution architect has determined that an opportunity will span across multiple internal or customer teams they will create a project in the <TBC> group on GitLab.com. Key participants should be added as members of the project (SAE, CSM, PS, Product, Customer Stakeholders) 
 
 Participants can then use GitLab issues to raise key use cases and questions. 
 These issues are the key collaboration point between GitLab team members and the customer team, they can be used to share architecture diagrams, documentation links, and answer questions raised by the customer.
