--- a/customer-success/solutions-architects/processes/index.html.md.erb
+++ b/customer-success/solutions-architects/processes/index.html.md.erb
@@ -52,12 +52,12 @@ handbook page.
 
 Simplified process description:
 
-- Ensure that PS Opportunity has already been created by SAL / AE in SFDC.
+- Ensure that PS Opportunity has already been created by SAE / AE in SFDC.
 - If it a standard (non-customized) service from our [full catalog](https://about.gitlab.com/services/catalog/).
-    - SAL / AE to order PS directly from Zuora in SFDC.
+    - SAE / AE to order PS directly from Zuora in SFDC.
 - If standard services do not meet the needs of the customer
     - Use the [Services Calculator](http://services-calculator.gitlab.io/) to generate an issue and a draft quote.
-    - Iterate on that issue with PS and SAL / AE.
+    - Iterate on that issue with PS and SAE / AE.
 
 ## Customer Security Assurance
 
@@ -85,7 +85,7 @@ Enterprise Solutions Architects typically support sales teams made up of Sales D
 1. **Customer response time for emails and meeting followups** I will always do my best to provide same-day responses to customer inquiries and follow ups unless otherwise noted. I like to provide customers top-notch service, but interruptions can affect that target. I will use my out of office when traveling so customers can expect delayed responses during those times. Feel free to contact me if it's approaching the end of the day and you didn't see me address a customer request. Slack is the easiest way to find me most of the time.
 1. **Delivery Excellence** If the nature of my response requires a top-notch service needing me to contextualise my response in better and higher quality to our customers, I will collaborate with my GitLab sales team and set reasonable timelines for completions. Examples could be customized and tailored summaries of technical guidance as per our documentation (not just a url), suggested reference solutions architectures, and/or integrations with third-party technologies to GitLab. 
 1. **Calendar** Schedule things as necessary right on my calendar during working hours - I'll do my best to keep my calendar up to date. However, if you see only one empty slot for a day or if it looks like the meeting would be back to back with something else, please check with me before confirming dates and times with the customer. If you want me at my best for you, I will need time to prepare and followup. If we schedule back to back, I've found I'm often late to arrive due to the last meeting, flustered as I context shift, lacking answers for known questions, unprepared with demo environments that were altered in the last call, etc.
-1. **Regular communication** A weekly strategy hour-long call with the SA, SAL, SDR and CSM is preferred. If more frequent synchronous communication is desirable or required, we should work together as a team to identify a viable cadence, required attendees, convenient time and agenda for those calls. In either of those regular communication methods, documenting discussion points and agreements is essential.
+1. **Regular communication** A weekly strategy hour-long call with the SA, SAE, SDR and CSM is preferred. If more frequent synchronous communication is desirable or required, we should work together as a team to identify a viable cadence, required attendees, convenient time and agenda for those calls. In either of those regular communication methods, documenting discussion points and agreements is essential.
 1. **Elevated conversations** The more we focus on value and stay away from very deep technical and troubleshooting conversations, the more I can help you achieve target sales. I'm happy to review and contribute to business plans and strategies so we remain in sync.
 1. **Professional Services** After careful assessment of the clients needs to drive faster adoption, I'm happy to recommend and propose required services for prospects and customers. I will write the initial SOW and get approvals from the Professional Services team.
 1. **Travel** While strategic enterprise sales absolutely require travel, each day on the road can increase the volume of work and calls on other days of the week as my dialogs with customers often require extensive time commitments to research and model specific customer solutions. Please plan strategically when looking at on-sites, considering that I support at least two sales teams in my region. Additionally, please work with the customer when arranging for an on-site (or F2F) visit with 1 week's notice. This will allow me to ensure my commitment to attend and take alternative arrangements for family and other matters if needed.
@@ -96,7 +96,7 @@ Enterprise Solutions Architects typically support sales teams made up of Sales D
 
 1. **Salesforce**
 [To-do] Add info on views and reports to use during the sales cycle. Also, guidance on SA being listed on opportunities and accounts (there is not any info in our current handbook)
-1. **Gainsight** Primarily for account planning in partnership with SAL and CSM. The easiest way to access Gainsight is via Salesforce. See the [Account Planning in Gainsight](/handbook/sales/gainsight/account-planning/) page for details.
+1. **Gainsight** Primarily for account planning in partnership with SAE and CSM. The easiest way to access Gainsight is via Salesforce. See the [Account Planning in Gainsight](/handbook/sales/gainsight/account-planning/) page for details.
 1. **Slack** Create a public internal team slack channel for your cross-functional team. This will allow you to collaborate easily without sending DM's.
 1. **Google Drive** There is a shared [GitLab Sales](https://drive.google.com/drive/folders/0BzQII5CcGHkKSFFJWkx3R1lUdGM?usp=sharing) folder. Running customer notes and other documents related to a specific customer should be stored in the [Customers and Prospects Subfolder](https://drive.google.com/drive/folders/0B-ytP5bMib9Ta25aSi13Q25GY1U?usp=sharing) under the appropriate letter and customer name subfolder.
 1. <b>[GitLab Account Management Project](https://gitlab.com/gitlab-com/account-management)</b> may be used for a POV and/or CSM collaboration with a customer post-sale.
@@ -104,7 +104,7 @@ Enterprise Solutions Architects typically support sales teams made up of Sales D
 
 ### Account Planning 
 
-Account planning helps the SAL and the SA elevate opportunity-driven conversations into value-based conversations that focus on the customer's value drivers. It is a critical step in strategically supporting the customer at the account level, and facilitates more efficient opportunity planning. See the [Using Gainsight for SAs](/handbook/customer-success/solutions-architects/processes/account-planning) page for details. 
+Account planning helps the SAE and the SA elevate opportunity-driven conversations into value-based conversations that focus on the customer's value drivers. It is a critical step in strategically supporting the customer at the account level, and facilitates more efficient opportunity planning. See the [Using Gainsight for SAs](/handbook/customer-success/solutions-architects/processes/account-planning) page for details. 
 
 ### Quarterly Business Reviews (QBR)
 
@@ -112,7 +112,7 @@ The entire cross-functional team should help in the preparation of the QBR conte
 
 ### Engaging an SA During the Sales Cycle
 
-Solution Architects may participate in initial qualifying meetings (IQM's) or allow the SDR and SAL/AE to manage the initial call and utilize information gained during it for additional preparation. Teams can handle this on a case by case basis.
+Solution Architects may participate in initial qualifying meetings (IQM's) or allow the SDR and SAE/AE to manage the initial call and utilize information gained during it for additional preparation. Teams can handle this on a case by case basis.
 
 Once objectives and expectations have been established following the  [command of the message discovery](https://internal-handbook.gitlab.io/handbook/sales/command-of-the-message/), we suggest a recommended review as an account team of information gathered. This will help us determine if qualification criterias have been met to proceed with further technical discovery or that the account requires further discovery of their outcomes. Solutions Architects oftentimes will have a unique perspective in a given opportunity and it is vital that this information is distilled and shared out, preferably through the command plan, to the rest of the account team.  
 
@@ -208,8 +208,8 @@ For Strategic Account Executives, the below process can be used to request a SA.
 - This request is triaged through a slack channel and will be accepted by a SA which will populate the Primary SA field.
 - The turn around time for a SA allocation is 24 hrs.
 - Enterprise SAs will be dedicated through out the lifetime of the opportunity.
-- Retaining SAs for multiple opportunities throughout the life cycle of an account or dedicated SA for SAL will be at SA/ASM manager discretion.
-- The SA/SAL alignment will be visible on a report
+- Retaining SAs for multiple opportunities throughout the life cycle of an account or dedicated SA for SAE will be at SA/ASM manager discretion.
+- The SA/SAE alignment will be visible on a report
 
 
 Async Slack support
@@ -230,7 +230,7 @@ SAs are regionaly aligned to MAEs and aligned in their respective account activi
 
 SAEs are asked to request support on Opportunity basis via [this request form](https://enterprise-sa-request.vercel.app/).
 
-Default alignment is maintained in the [EMEA AE-SA Alignment page](https://gitlab.com/groups/gitlab-com/customer-success/solutions-architecture/-/wikis/EMEA-SAL-SA-Alignment). 
+Default alignment is maintained in the [EMEA AE-SA Alignment page](https://gitlab.com/groups/gitlab-com/customer-success/solutions-architecture/-/wikis/EMEA-SAE-SA-Alignment). 
 
 When workload exceeds the SA's capacity or when there is a request from other departments, please reach out via **#emea-customer-success* Slack channel for assistance.
 
@@ -306,7 +306,7 @@ To be efficient as possible, this is the recommended approach:
     1. Reference running logs in the [Customers & Prospects](https://drive.google.com/drive/u/1/folders/0B-ytP5bMib9Ta25aSi13Q25GY1U) folder
 1. **Explore**: If applicable, document the solutions or work-arounds that were explored with the customer and why that was not sufficient
 1. **Engage**: Reach out to the Product Manager
-    1. Create a new slack channel with SA/SAL/PM/etc with a link to the Account Management issue
+    1. Create a new slack channel with SA/SAE/PM/etc with a link to the Account Management issue
     1. Be mindful and gift a minimum of 48-96 hr lead time.  _Properly done, PMs should have at least a weeks notice_
     1. Collaborate using the Account Management issue, history, running docs, and shared material
     1. [optional] Suggest an internal team call to coordinate materials and next steps
