--- a/customer-success/solutions-architects/sa-practices/effective-objection-handling-practice/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/effective-objection-handling-practice/index.html.md.erb
@@ -100,9 +100,9 @@ Please note it's suggested to have these meetings weekly, biweekly so handling o
 
 **Before the meeting:**
 
-- Gather info about attendees & company (SDR, SAL, LinkedIn, 10k, Job Openings)
+- Gather info about attendees & company (SDR, SAE, LinkedIn, 10k, Job Openings)
 - Understand the higher level initiatives if any
-- Brainstorm on potential objections, personas, successful meeting outcomes in a strategic meeting with SAL
+- Brainstorm on potential objections, personas, successful meeting outcomes in a strategic meeting with SAE
 
 **During the meeting:**
 
