--- a/customer-success/solutions-architects/sa-practices/strategic-solution-selling/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/strategic-solution-selling/index.html.md.erb
@@ -22,9 +22,9 @@ A strategic solution is aimed to provide a customer the DevOps capabilities for 
 
 ## Analyze and Gather Information
 
-When an opportunity is qualified [**during the discovery**](/handbook/sales/playbook/discovery/) by a Strategic Account Leader (SAL), the SAL will work with the SA and decide the plan for next steps. The SA may conduct a **technical** discovery on the first call with the customer. Then the SA can start the analysis for scoping.
+When an opportunity is qualified [**during the discovery**](/handbook/sales/playbook/discovery/) by a Strategic Account Executive (SAE), the SAE will work with the SA and decide the plan for next steps. The SA may conduct a **technical** discovery on the first call with the customer. Then the SA can start the analysis for scoping.
 
-The following diagram shows the mindset for the SA to consider when expanding the technical feature considerations to the strategic solutioning, specifically the information that needs to be discovered and gathered. It involves various activities based on the SAL and SA being engaged with a customer during the discovery and scoping.
+The following diagram shows the mindset for the SA to consider when expanding the technical feature considerations to the strategic solutioning, specifically the information that needs to be discovered and gathered. It involves various activities based on the SAE and SA being engaged with a customer during the discovery and scoping.
 
 <div style="width: 640px; height: 480px; margin: 10px; position: relative;"><iframe allowfullscreen frameborder="0" style="width:640px; height:480px" src="https://lucid.app/documents/embedded/fa7a09ed-e840-4c2a-a18b-1270a5cff62b" id="a8lEA_q1dGe5"></iframe></div>
 
@@ -47,7 +47,7 @@ Research and analysis of the opportunity are critical to identify the strategic 
 
 Since these activities require extensive work, there needs to be pre quallification of the opportunity for the consideration based on the personas engaged and the size of the opportunity.
 
-Discovery should be based on the SAL and SA collaboration but is owned by the SAL. Business-related information will be more easily identified by the SAL, where as the SA can lead to identify technical challenges, the technology landscape and aligned key GitLab capabilities based on the customer environment. The initial discovery information can better equip the SA with the knowledge for the further discussions with the customer. 
+Discovery should be based on the SAE and SA collaboration but is owned by the SAE. Business-related information will be more easily identified by the SAE, where as the SA can lead to identify technical challenges, the technology landscape and aligned key GitLab capabilities based on the customer environment. The initial discovery information can better equip the SA with the knowledge for the further discussions with the customer. 
 
 The initial information is based on various sources of information, which can be found, for example via public channels, such as LinkedIn, Company blogs, or public reports. Although the initial analysis step might not always expose the pain points for the customer it is vital to them which might be used for future discussions with the customer. It will help to align and to address the future value proposition.
 
@@ -69,7 +69,7 @@ The following mind map provides an example of building the information about the
 
 The complete [example](https://drive.google.com/file/d/1Qy9bsMmBDqr5ZaMguGGVDwJ5-rkPyxb9/view?usp=sharing), was created based on the GitLab's customer and can be found with the above link for reference (accessible only internally).
 
-This [template](https://docs.google.com/presentation/d/1xilP8z7nYHJVa05qiBNFq2cEoq4HtKj-c-bbR0Y29JY/edit?usp=sharing) can be used by the account team to brainstorm. The brainstorming session between the SA and SAL helps with the alignments of the future stages of the sales process, specifically focusing on “discovery”, "scoping" and “technical evaluation”. 
+This [template](https://docs.google.com/presentation/d/1xilP8z7nYHJVa05qiBNFq2cEoq4HtKj-c-bbR0Y29JY/edit?usp=sharing) can be used by the account team to brainstorm. The brainstorming session between the SA and SAE helps with the alignments of the future stages of the sales process, specifically focusing on “discovery”, "scoping" and “technical evaluation”. 
 
 ### Example Discussion Areas
 Key areas driven by SA during the initial customer engagement include for example: 
@@ -86,7 +86,7 @@ Key areas driven by SA during the initial customer engagement include for exampl
 - Aligned GitLab capabilities / solutions
 - Industry related initiatives, such as regulations and compliance, security mindset and practice
 
-After the initial engagement and activities, asynchronous / synchronous collaboration can benefit the SAL and SA to analyze the current data and connect business points with the technical aspects. The SAL should provide the key directions from the business point of view to the solution architecture team. The SA can indicate the main areas or capabilities and the high level idea for solutioning, which should subsequent conversations with the customer. 
+After the initial engagement and activities, asynchronous / synchronous collaboration can benefit the SAE and SA to analyze the current data and connect business points with the technical aspects. The SAE should provide the key directions from the business point of view to the solution architecture team. The SA can indicate the main areas or capabilities and the high level idea for solutioning, which should subsequent conversations with the customer. 
 
 ## During Technical Discovery and Scoping
 
@@ -107,12 +107,12 @@ During the call, listen and probe for the key information about:
 - listen and qualify if the problem identified is in a silo by a single unit or it is an opportunity that is across the entire organization
 
 ### Activities for Discovery and Scoping
-SAL Driven Activities: setting the stage for the discovery with the meetings and right participants; during the call, take the notes, discover/confirm the organizational structure and approach
+SAE Driven Activities: setting the stage for the discovery with the meetings and right participants; during the call, take the notes, discover/confirm the organizational structure and approach
 
 SA Driven Activities: during the call, more prescriptive in assessing the conversation as **transactional** vs **strategic** solution.
 
-Activities driven by the SA + collaboration with the SAL
-- Map out the technical team structure and work with the SAL to expand the stakeholders for discussion if we agree on the pre qualification
+Activities driven by the SA + collaboration with the SAE
+- Map out the technical team structure and work with the SAE to expand the stakeholders for discussion if we agree on the pre qualification
 - Collaborate on the organizational priority + inject into the discussion for initiatives and changes that can drive the conversation beyond just tools / features
 
 #### Transactional based solutioning
@@ -139,7 +139,7 @@ When engaging with the topics that lead to good responses from the initial discu
 A SA can lead and identify required capabilities and solution framework upon the following information gathered and analysis performed:
 
 - Information and knowledge on the current challenges, pains and problems
-- Assessment of the opportunity as transactional based solutioning with limited features vs extending to strategic account planning (coordinate with SAL) 
+- Assessment of the opportunity as transactional based solutioning with limited features vs extending to strategic account planning (coordinate with SAE) 
 - May be a smaller land but earns the right for a bigger conversation 
 
 Capabilities for the DevOps platform should have been explored with the customers in these areas as example:
