--- a/customer-success/solutions-architects/sales-plays/index.html.md.erb
+++ b/customer-success/solutions-architects/sales-plays/index.html.md.erb
@@ -28,7 +28,7 @@ As a general guideline, no more than 2 Solutions Architects should join any sing
 
 Who is this sales play for?
 
-- Primary: SALs, SDRs and SAs who handle new accounts, new teams in existing customers
+- Primary: SAEs, SDRs and SAs who handle new accounts, new teams in existing customers
 - Secondary: CSMs who help in discovery with new teams in existing customers
 
 ## Who to meet
@@ -69,7 +69,7 @@ Consider the following questions:
 
 **Sales Play**
 
-1. For SALs/SDRs please make sure the customers are on the qualification list for your region. Eg: For enterprise west look at [this](https://gitlab.my.salesforce.com/00O4M000004aULR)
+1. For SAEs/SDRs please make sure the customers are on the qualification list for your region. Eg: For enterprise west look at [this](https://gitlab.my.salesforce.com/00O4M000004aULR)
 1. During qualification, make sure to identify the pain points, customer profile using the collaterals highlighted below:
     1. [Questions](https://about.gitlab.com/handbook/marketing/sales-plays-cicd/playbook-premium-to-ultimate/#engaging-the-customer) to better understand customer needs, future state & required capabilities
     1. Customer presentations & GTM use cases link [here](https://about.gitlab.com/handbook/marketing/brand-and-product-marketing/product-and-solution-marketing/#customer-facing-presentations)
@@ -83,7 +83,7 @@ Discovery
 
 **Owner**
 
-Primary: SDR, SAL
+Primary: SDR, SAE
 Secondary: SA
 
 ### Stage: Discovery
@@ -111,7 +111,7 @@ Secondary: SA
 
 **Owner**
 
-SA and SAL
+SA and SAE
 
 **Sales Play: New Teams(existing customers)**
 
@@ -137,7 +137,7 @@ SA and SAL
 
 **Owner**
 
-SA and SAL
+SA and SAE
 
 ### Stage: Technical Evaluations
 
@@ -169,7 +169,7 @@ SA and SAL
 
 **Owner**
 
-SA and SAL
+SA and SAE
 	
 
 ## Additional Resources to use
