--- a/customer-success/solutions-architects/tools-and-resources/pov/index.html.md.erb
+++ b/customer-success/solutions-architects/tools-and-resources/pov/index.html.md.erb
@@ -39,7 +39,7 @@ A POV is conducted with a GitLab trial license either using GitLab.com or a self
 
 - Must tie to an opportunity for a new logo or up-tier to ultimate for an existing customer with a net ARR over 100K or with significant LAM
 
-- It is guided by GitLab SA to run the scoped hands-on technical evaluation with the prospect/customer, collaborate with the sales (SAL, AE) with defined business outcomes and GitLab values
+- It is guided by GitLab SA to run the scoped hands-on technical evaluation with the prospect/customer, collaborate with the sales (SAE, AE) with defined business outcomes and GitLab values
 
 - Prospect/customer has identified and provided available technical and business resources to perform the evaluation, discuss / assess the results to map to the outcomes and value
 
@@ -60,7 +60,7 @@ A POV is conducted with a GitLab trial license either using GitLab.com or a self
 
 ### POV Scope and Acceptance
 
-SA working with SAL and AE can define the POV scope with the customer, with alignment to the business values and the GitLab solution. For each solution, the typical scope and acceptances are listed for reference but the team should define the scope, time and execution with acceptance for each engagement.
+SA working with SAE and AE can define the POV scope with the customer, with alignment to the business values and the GitLab solution. For each solution, the typical scope and acceptances are listed for reference but the team should define the scope, time and execution with acceptance for each engagement.
 
 - [DevSecOps](/handbook/customer-success/solutions-architects/tools-and-resources/pov/devsecops/)
 - [Software Compliance](/handbook/customer-success/solutions-architects/tools-and-resources/pov/compliance/)
@@ -73,13 +73,13 @@ SA working with SAL and AE can define the POV scope with the customer, with alig
 
 A POV, no matter the type, should be validated by the Solutions Architect.  Therefore, the `SA Validated Tech Evaluation Start Date` field on the Opportunity needs to be filled with the date the POV would start.  Likewise, the `SA Validated Tech Evalulation End Date` field should be entered when it completes. 
 
-In order to track a POV correctly in Salesforce, the Strategic Account Leader should position the opportunity as Stage 3. The Solutions Architect will create the POV object within SFDC when the prospect or customer has indicated interest in moving forward with a POV.
+In order to track a POV correctly in Salesforce, the Strategic Account Executive should position the opportunity as Stage 3. The Solutions Architect will create the POV object within SFDC when the prospect or customer has indicated interest in moving forward with a POV.
 
 To track a POV, click the _Proof of Values_ tab from the top menu bar in Salesforce. Create a new POV using the _New_ button. Alternately, the Solutions Architect may select the relevant Opportunity, scroll down to the related list labeled _Proof of Values_ and click on the "New Proof of Value" button. This will automatically associate the POV with that Opportunity while all other fields need to be manually completed.
 
 Complete the following fields at minimum:
 
-- **POV Owner** - this is the Strategic Account Leader
+- **POV Owner** - this is the Strategic Account Executive
 - **Customer Success Manager** - this is the CSM who will be introduced during the POV
 - **Solutions Architect** - this is the SA who owns execution of the POV
 - **Proof of Value Name** - this commonly is named identical to the opportunity name
@@ -107,11 +107,11 @@ Sales and SA leader participation in the POV approval process will ensure we can
 
 ##### Approval Process
 
-- Upon mutual agreement with the associated SAL, the Solution Architect working on the opportunity will [create a POV object on the opportunity](#tracking-a-pov-in-salesforce).
+- Upon mutual agreement with the associated SAE, the Solution Architect working on the opportunity will [create a POV object on the opportunity](#tracking-a-pov-in-salesforce).
 - When a new POV object is created, a notification is posted to the `#troops-pov-created` slack channel.
 - In addition to a weekly review of a region's ongoing POVs and technical win work, Area sales and SA leaders monitor the `#troops-pov-created` slack channel for new POVs.  When a new POV is created, asynchronous or synchronous collaboration on the quality of the opportunity commences.
 - The ASM or SA Manager marks the POV for approval via the Salesforce object or through a troops action in Slack.
-- The ASM or SA Manager will query about plans to position professional services at this stage. All SALs/SAs are required to position Professional services in opportunities with a qualified POV to guarantee continued success for the customer. Please read more about how to positon [here](https://about.gitlab.com/handbook/customer-success/solutions-architects/processes/#positioning-professional-services)
+- The ASM or SA Manager will query about plans to position professional services at this stage. All SAEs/SAs are required to position Professional services in opportunities with a qualified POV to guarantee continued success for the customer. Please read more about how to positon [here](https://about.gitlab.com/handbook/customer-success/solutions-architects/processes/#positioning-professional-services)
 
 ### POV Best Practices
 
@@ -126,7 +126,7 @@ Other best practices for POV’s:
 - Ask WHY a POV is required vs Q&A or other considerations, since prospects are often using existing GitLab installations
 - Feature/function POV’s should be run in basic environments, not HA, unless the HA environment is already established and proven
 - Required capabilities should be a limited number, 5 or less ideally - these should be purchase triggers and differentiators
-- Please work together(SA & SAL) to map required capabilities to decision criteria in the COM plan
+- Please work together(SA & SAE) to map required capabilities to decision criteria in the COM plan
 - A POV does not implement a fully designed and configured ecosystem in a customer environment, it is a product evaluation
 
 Below is best practice guidance for conducting each type of POV. These processes share a similar goal of meeting identified business outcomes for the customer, but they vary based on engagement style, POV duration, location and intensity. The following applies to all POV's:
@@ -141,7 +141,7 @@ Below is best practice guidance for conducting each type of POV. These processes
 
 #### GitLab Roles
 
-- Strategic Account Leader (SAL) or Account Executive (AE) - Relationship manager, owner of licensing
+- Strategic Account Executive (SAE) or Account Executive (AE) - Relationship manager, owner of licensing
 - Solutions Architect (SA) - Primary technical contact, POV owner and project manager
 - Customer Success Manager (CSM) - _Only for qualified accounts._ Introduced for customer visibility, occasional POV assistance
 - Professional Services - rarely as needed in a pre-sales capacity
@@ -155,12 +155,12 @@ Below is best practice guidance for conducting each type of POV. These processes
 - SA: POV document is created if this is required by the customer, otherwise default to the Customer Success project
 - SA: Ensure POV goals and business outcomes are clearly identified prior to kickoff
 - SA: For the largest strategic opportunities, notify GitLab Support of POV dates, customer, and other relevant information using the applicable Slack channel related to Self-Managed or GitLab.com support
-- SAL/AE: Opportunity updated in Salesforce, set to Stage 3-Technical Evaluation, with POV Information entered per the [handbook](/handbook/sales/field-operations/gtm-resources/)
-- SAL/AE: Signed NDA by the legal team if required
-- SAL/AE: Review [Customer Assurance Package](https://about.gitlab.com/security/cap/) with customer (if SaaS evaluation)
+- SAE/AE: Opportunity updated in Salesforce, set to Stage 3-Technical Evaluation, with POV Information entered per the [handbook](/handbook/sales/field-operations/gtm-resources/)
+- SAE/AE: Signed NDA by the legal team if required
+- SAE/AE: Review [Customer Assurance Package](https://about.gitlab.com/security/cap/) with customer (if SaaS evaluation)
     - The Customer Package requires an NDA, and contains commonly requested security information (SOC2, Penetration Test Results, etc) and can be requested via a [Field Security Issue](https://gitlab.com/gitlab-com/gl-security/security-assurance/field-security-team/customer-assurance-activities/caa-servicedesk/-/issues/new?issuable_template=Security%20Documents%20CAA)
-- SAL/AE: Schedule Internal kick off meeting (detailed below)
-- SAL/AE: Schedule kickoff meeting with customer
+- SAE/AE: Schedule Internal kick off meeting (detailed below)
+- SAE/AE: Schedule kickoff meeting with customer
 - CSM: Review collaboration project content prior to internal kickoff meeting
 - SA: For SaaS trials that need CI/CD, request trial runner activation per the [handbook](https://about.gitlab.com/handbook/support/internal-support/#trial-extensions-and-plans).
 
@@ -196,20 +196,20 @@ These POV's are marked by regular touch points and consistent interaction over t
 
 #### Internal Kickoff Meeting led by the Solutions Architect
 
-GitLab Attendees: Strategic Account Leader, Solutions Architect
+GitLab Attendees: Strategic Account Executive, Solutions Architect
 
 Agenda:
 
 - Collaboratively review customer success project README to ensure everything is correct
 - POV document review (only if a document is required for the POV)
 - Discussion of strategy, whether GitLab Support or Professional Services need to be notified
-- Strategic Account Leader to schedule external kickoff with customer
+- Strategic Account Executive to schedule external kickoff with customer
 
 #### External Kickoff Meeting (Remote) led by the Solutions Architect
 
 Attendees:
 
-- GitLab: Strategic Account Leader, Solutions Architect
+- GitLab: Strategic Account Executive, Solutions Architect
 - Customer: Executive contact, Technical POV lead
 
 Agenda:
@@ -219,7 +219,7 @@ Agenda:
 - Agree on due dates for POV completion, add to project POV milestone
 - Review project POV issues - add new issues if necessary with agreed due dates
 - Review POV document with customer (only when required)
-- Establish cadence with customer, Strategic Account Leader to schedule during this call
+- Establish cadence with customer, Strategic Account Executive to schedule during this call
 - Create issues for each cadence call with customer under the POV milestone for call notes
 - Provision licenses and establish if customer needs help getting GitLab set up and configured
 
@@ -227,7 +227,7 @@ Agenda:
 
 Attendees:
 
-- GitLab: Solutions Architect, Strategic Account Leader
+- GitLab: Solutions Architect, Strategic Account Executive
 - Customer: Technical POV Lead
 
 Agenda:
@@ -237,11 +237,11 @@ Agenda:
 - What do we need to change?
 - Review success criteria - are we on track?
 
-#### POV Conclusion Meeting led by the SAL or AE
+#### POV Conclusion Meeting led by the SAE or AE
 
 Attendees:
 
-- GitLab: Strategic Account Leader, Solutions Architect, Customer Success Manager
+- GitLab: Strategic Account Executive, Solutions Architect, Customer Success Manager
 - Customer: Executive contact, Technical POV Lead
 
 Agenda:
