--- a/customer-success/solutions-architects/tools-and-resources/pov/platform/index.html.md.erb
+++ b/customer-success/solutions-architects/tools-and-resources/pov/platform/index.html.md.erb
@@ -61,7 +61,7 @@ It is recommended to provide proof points from other sources, instead of carryin
 
 ### Other POV Scope and Acceptance
 
-SA working with SAL and AE can define the POV scope with the customer, with alignment to the business values and the GitLab solution. For each solution, the typical scope and acceptances are listed for reference but the team should define the scope, time and execution with acceptance for each engagement.
+SA working with SAE and AE can define the POV scope with the customer, with alignment to the business values and the GitLab solution. For each solution, the typical scope and acceptances are listed for reference but the team should define the scope, time and execution with acceptance for each engagement.
 
 - [DevSecOps](/handbook/customer-success/solutions-architects/tools-and-resources/pov/devsecops/)
 - [Software Compliance](/handbook/customer-success/solutions-architects/tools-and-resources/pov/compliance/)
